@@ -38,6 +38,7 @@ v.0.5dev (ongoing development)
  * hd44780 driver: reorganize ConnectionType recognition
  + hd44780 driver: new ConnectionType mplay
  + hd44780 driver: get/set contrast & brightness support for lcd2usb (M. Dolze)
+ + hd44780 driver: reporting in ConnectionType functions (Thomas Jarosch)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
